--- a/OMXWatcher.cabal
+++ b/OMXWatcher.cabal
@@ -24,11 +24,12 @@ executable OMXWatcher-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , OMXWatcher
-                     , tagsoup
-                     , scalpel
-                     , text
                      , bytestring
+                     , OMXWatcher
+                     , scalpel
+                     , split
+                     , tagsoup
+                     , text
   default-language:    Haskell2010
 
 test-suite OMXWatcher-test
