--- a/OMXWatcher.cabal
+++ b/OMXWatcher.cabal
@@ -51,7 +51,11 @@ executable plotter
                      , bytestring
                      , vector
                      , cassava
-                     , OMXWatcher
+                     , split
+                     , time
+                     , Chart
+                     , Chart-gtk
+                     , Chart-cairo
   default-language:    Haskell2010
 
 test-suite OMXWatcher-test
