--- a/OMXWatcher.cabal
+++ b/OMXWatcher.cabal
@@ -15,8 +15,18 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     OMXWatcher.Types
+                     , OMXWatcher.Chart
+                     , OMXWatcher.Csv
   build-depends:       base >= 4.7 && < 5
+                     , time >= 1.6 && < 2
+                     , bytestring
+                     , vector
+                     , cassava
+                     , split
+                     , Chart
+                     , Chart-gtk
+                     , Chart-cairo
   default-language:    Haskell2010
 
 executable omxwatcher
@@ -44,18 +54,12 @@ executable marketsim
   default-language:    Haskell2010
 
 executable plotter
-  hs-source-dirs:      src
+  hs-source-dirs:      app
   main-is:             Plotter.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Plotter
   build-depends:       base
                      , bytestring
-                     , vector
-                     , cassava
-                     , split
-                     , time
-                     , Chart
-                     , Chart-gtk
-                     , Chart-cairo
+                     , OMXWatcher >= 0.1
   default-language:    Haskell2010
 
 test-suite OMXWatcher-test
