--- a/OMXWatcher.cabal
+++ b/OMXWatcher.cabal
@@ -18,10 +18,12 @@ library
   exposed-modules:     OMXWatcher.Types
                      , OMXWatcher.Chart
                      , OMXWatcher.Csv
+                     , OMXWatcher.Indicator
   build-depends:       base >= 4.7 && < 5
                      , time >= 1.6 && < 2
                      , bytestring
                      , vector
+                     , mtl
                      , cassava
                      , split
                      , Chart
