--- a/OMXWatcher.cabal
+++ b/OMXWatcher.cabal
@@ -56,10 +56,16 @@ executable plotter
 test-suite OMXWatcher-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
-  main-is:             Spec.hs
+  main-is:             Main.hs
   build-depends:       base
                      , OMXWatcher
+                     , tasty
+                     , tasty-hunit
+                     --, tasty-smallcheck
+                     --, tasty-quickcheck
+                     , tasty-hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  other-modules:       OMXWatcher.IndicatorTest
   default-language:    Haskell2010
 
 source-repository head
